# brush-up-python-backend

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml  tutor_prompt.md
notes/: All.md  Any.md  Append.md  Arithmetic method.md  Arithmetic operation.md  Attribute.md  Augmented assignment.md  Boolean.md  Built-in function.md  Chr.md  Class definition.md  Class method.md  Class variable.md  Class.md  Clear.md  Cls.md  Collection.md  Common method.md  Comparison method.md  Comparison.md  Composition.md  Comprehension.md  Conditional expression.md  Constant.md  Constructor.md  Count.md  Decorator.md  Dict method.md  Dictionary.md  Dir.md  Encapsulation.md  Equality.md  Explicit coercion.md  Expression.md  Extend.md  Float.md  For loop.md  Frozen set.md  Function call.md  Function definition.md  (+87 more)
src/: agent.py  api.py  budget.py  db.py  graph.py  main.py
tests/: conftest.py  test_agent.py  test_api.py  test_api_e2e.py  test_budget.py  test_db.py  test_e2e.py  test_graph.py  test_integration.py  test_main.py  test_retrieval.py
