[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "brush-up-py"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
